# ros2_tunnel_explorer

./: .gitignore  .repos  README.md
artifacts/stage2c_revisit_radius_075/: aggregated_results.md  frontier_explorer_params_info_revisit_r075.yaml  stage2c_summary.md
artifacts/stage2c_revisit_radius_075/valid_run_json/: run_10_benchmark_results.json  run_11_benchmark_results.json  run_12_benchmark_results.json  run_8_benchmark_results.json  run_9_benchmark_results.json
benchmark_tools/: CMakeLists.txt  package.xml
benchmark_tools/benchmark_tools/: __init__.py  path_util.py  stats.py
benchmark_tools/config/: stage0b_goals.yaml  stage0b_known_free_goals.yaml  stage0b_turn_diagnostic_goals.yaml
benchmark_tools/scripts/: analyze_stage2b_outlier.py  record_stage0_metrics.py  run_navigation_smoke_test.py
benchmark_tools/tests/: test_path_util.py  test_stats.py
config/: fastdds_udp_only.xml
docs/: benchmark_summary.md  environment_feasibility.md  final_strategy.md  jazzy_compatibility.md  known_issues.md  stage0b_attempt1_online_slam_rectangle.md  stage0b_dwb_turn_diagnosis.md  stage0b_rotation_shim_ab_test.md  stage0b_rotation_shim_timeout60.md  stage1c_smoke_integration.md  stage1c_smoke_results.md  stage2a_benchmark_plan.md  stage2a_nearest_frontier_baseline_results.md  stage2b_information_gain_revisit_design.md  stage2b_information_gain_revisit_results.md  stage2c_revisit_radius_075_plan.md  stage3d_entrance_loop_recovery_results.md  stage4_closure.md  stage4b1_safe_geometry_bias_results.md  stage4b2_entrance_oscillation_detection.md  stage4b3_oscillation_escape_response.md  stage4b4_alternating_pair_oscillation.md  stage4b4_eval_results.md  stage4b_tunnel_aware_frontier_scoring_results.md  stage4c_multi_topology_results.md  stage4d0b_failure_attribution.md  stage4g2_optional_modules.md
scripts/: aggregate_stage2a_results.sh  analyze_rosbag.py  analyze_stage4d0_failures.py  cleanup_simulation.sh  dump_nav2_diagnostic_params.sh  run_stage1c_smoke.sh  run_stage2a_benchmark.sh  run_stage4b1_ablation.sh  run_stage4b1_mini_eval.sh  run_stage4b2_smoke.sh  run_stage4b3_smoke.sh  run_stage4b4_eval.sh  run_stage4b4_smoke.sh  run_stage4b_ablation.sh  run_stage4c1_verify.sh  run_stage4c_full.sh  run_stage4d2_verify.sh  run_stage4d3_benchmark.sh  run_stage4e2_smoke.sh  run_stage4f_benchmark.sh  run_stage4g1_final.sh  stage3_comparison.py  stage4b_comparison.py  stage4f_analysis.py  wait_for_nav2_active.sh
scripts/experimental/: stage0b_bootstrap.py
tunnel_centerline_extractor/: CMakeLists.txt  package.xml
tunnel_centerline_extractor/config/: centerline_extractor_params.yaml
tunnel_centerline_extractor/include/tunnel_centerline_extractor/: centerline_graph.hpp  distance_field.hpp  grid_types.hpp  skeleton_extractor.hpp  tunnel_centerline_node.hpp
tunnel_centerline_extractor/launch/: centerline_extractor.launch.py
tunnel_centerline_extractor/src/: centerline_graph.cpp  distance_field.cpp  main.cpp  skeleton_extractor.cpp  tunnel_centerline_node.cpp
tunnel_centerline_extractor/test/: test_centerline_graph.cpp  test_distance_field.cpp  test_skeleton_extractor.cpp
tunnel_explorer_bringup/: CMakeLists.txt  package.xml
tunnel_explorer_bringup/config/: gz_waffle_short_range.sdf.xacro  nav2_params.yaml  nav2_params_rotation_shim.yaml  slam_toolbox_params.yaml
tunnel_explorer_bringup/launch/: stage0_simulation.launch.py
tunnel_explorer_bringup/rviz/: stage0_view.rviz
tunnel_frontier_explorer/: CMakeLists.txt  package.xml
tunnel_frontier_explorer/config/: frontier_explorer_params.yaml  frontier_explorer_params_info_revisit.yaml  frontier_explorer_params_info_revisit_r075.yaml
tunnel_frontier_explorer/config/final/: baseline_bootstrap.yaml
tunnel_frontier_explorer/config/stage4b/: centerline_only.yaml  full.yaml  risk_only.yaml  stage3d_baseline.yaml
tunnel_frontier_explorer/config/stage4b1/: wall_risk_tiebreaker.yaml  wall_risk_very_weak.yaml  wall_risk_weak.yaml
tunnel_frontier_explorer/config/stage4b3/: wall_risk_weak_escape.yaml
tunnel_frontier_explorer/config/stage4d/: conservative_fallback.yaml  cooldown_recovery.yaml
tunnel_frontier_explorer/include/tunnel_frontier_explorer/: entrance_oscillation_detector.hpp  escape_probe_generator.hpp  frontier_blacklist.hpp  frontier_cluster.hpp  frontier_detector.hpp  frontier_explorer_node.hpp  frontier_goal_selector.hpp  frontier_scorer.hpp  frontier_visit_history.hpp  tunnel_geometry_grid.hpp
tunnel_frontier_explorer/launch/: frontier_explorer.launch.py
tunnel_frontier_explorer/src/: entrance_oscillation_detector.cpp  escape_probe_generator.cpp  frontier_blacklist.cpp  frontier_detector.cpp  frontier_explorer_node.cpp  frontier_goal_selector.cpp  frontier_scorer.cpp  frontier_visit_history.cpp  main.cpp
tunnel_frontier_explorer/test/: test_entrance_oscillation_detector.cpp  test_escape_probe_generator.cpp  test_frontier_blacklist.cpp  test_frontier_detector.cpp  test_frontier_goal_selector.cpp  test_frontier_scorer.cpp  test_frontier_scorer_tunnel_aware.cpp  test_frontier_visit_history.cpp  test_tiebreaker.cpp  test_tunnel_geometry_grid.cpp
tunnel_worlds/: CMakeLists.txt  package.xml
tunnel_worlds/worlds/: branching_tunnel_y.sdf
