<?xml version="1.0"?>
<package format="3">
  <name>tunnel_centerline_extractor</name>
  <version>0.1.0</version>
  <description>Tunnel centerline and distance field extraction from occupancy grids</description>
  <maintainer email="zhouyi@example.com">zhouyi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
