<?xml version="1.0"?>
<package format="3">
  <name>tunnel_worlds</name>
  <version>0.0.0</version>
  <description>Gazebo worlds for tunnel frontier exploration benchmarks.</description>

  <maintainer email="ruling_odious2o+nzj@icloud.com">Alex Walker</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
